@@ -86,6 +86,7 @@
 --add-opens jdk.compiler/com.sun.tools.javac=ALL-UNNAMED
 --add-opens java.base/java.lang=ALL-UNNAMED
 --add-opens java.base/java.util=ALL-UNNAMED
+--add-opens java.base/java.nio=ALL-UNNAMED
 
 ### GC logging options -- uncomment to enable
 
